# SceneHub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup.sh
experiments/: align_to_blender_photogram.py  decimation_test.py  geometry_processor.py  measure_3d_si_ti.py  measure_mesh_complexity.py  measure_si_ti.py  mesh_simplify.py  multiview_renderer.py  o3d_player.py  option.py  reconstruct.py  render_cam_position.py  rgbd_processor.py  texture_mapping.py
include/: data_type.hpp
include/sensor/: kinect_cameras.hpp  kinect_capture.hpp
scripts/: build.sh  decimate.sh  measure_si_ti.sh  reconstruct.sh  test_dataset.sh  test_multiview_renderer.sh
src/: CMakeLists.txt  main_texture_mapping.cpp  reconstruct_texture_mesh.cpp  util.cpp
src/reconstruction/: CMakeLists.txt  reconstruction.cpp
src/sensor/: kinect_cameras.cpp  kinect_capture.cpp
